--- a/src/games/views/html/style.css
+++ b/src/games/views/html/style.css
@@ -6,7 +6,8 @@
     'slotsBlu'
     'scoreRed'
     'slotsRed'
-    'gameEvents';
+    'gameEvents'
+    'adminToolbox';
 
   @media screen(lg) {
     grid-template-areas:
@@ -19,9 +20,9 @@
 
   @media screen(xl) {
     grid-template-areas:
-      'gameSummary scoreBlu scoreBlu       scoreRed       scoreRed'
-      'gameSummary slotsBlu gameClassIcons gameClassIcons slotsRed'
-      'gameEvents  .        .              .              .';
+      'gameSummary scoreBlu     scoreBlu        scoreRed        scoreRed'
+      'gameSummary slotsBlu     gameClassIcons  gameClassIcons  slotsRed'
+      'gameEvents  adminToolbox adminToolbox    adminToolbox    adminToolbox';
     grid-template-columns: 2fr 3fr auto auto 3fr;
   }
 
@@ -349,4 +350,10 @@
   &:hover {
     background-color: lighten(theme('colors.abru.dark.29'), 2%);
   }
+}
+
+.game-admin-toolbox {
+  background-color: theme('colors.abru.dark.29');
+  border-radius: 8px;
+  padding: 10px;
 }
