--- a/src/games/views/html/style.css
+++ b/src/games/views/html/style.css
@@ -364,6 +364,64 @@
   }
 }
 
+.show-assigned-skills-checkbox {
+  display: block;
+  position: relative;
+  cursor: pointer;
+  user-select: none;
+
+  width: 72px;
+
+  input[type='checkbox'] {
+    appearance: none;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
+
+  .icon {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+
+    color: theme(colors.ash);
+    background-color: theme(colors.accent.DEFAULT);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 8px;
+
+    border-radius: 4px;
+
+    &:hover {
+      background-color: darken(theme(colors.accent.DEFAULT), 10%);
+    }
+  }
+
+  input:checked ~ .icon {
+    > .on {
+      display: block;
+    }
+
+    > .off {
+      display: none;
+    }
+  }
+
+  input:not(:checked) ~ .icon {
+    > .on {
+      display: none;
+    }
+
+    > .off {
+      display: block;
+    }
+  }
+}
+
 body:has(#show-assigned-skills:checked) {
   .player-assigned-skill {
     display: block;
