--- a/src/games/views/html/style.css
+++ b/src/games/views/html/style.css
@@ -106,8 +106,10 @@
         .slot {
           flex-flow: row-reverse nowrap;
 
-          .player-name {
-            text-align: right;
+          .player-link {
+            /* text-align: right; */
+            /* flex-flow: row-reverse nowrap; */
+            justify-content: flex-end;
           }
         }
       }
@@ -152,15 +154,32 @@
           }
         }
 
-        .player-name {
+        .player-link {
           flex: 1 1 0;
-          font-size: 20px;
-          font-weight: 500;
-          overflow: hidden;
-          text-overflow: ellipsis;
+
+          display: flex;
+          flex-flow: row nowrap;
+          align-items: baseline;
+          gap: 4px;
 
           &:hover {
-            text-decoration: underline;
+            .player-name {
+              text-decoration: underline;
+            }
+          }
+
+          .player-name {
+            font-size: 20px;
+            font-weight: 500;
+            overflow: hidden;
+            text-overflow: ellipsis;
+          }
+
+          .player-assigned-skill {
+            display: none;
+            font-size: 14px;
+            font-weight: 400;
+            margin: 0 4px;
           }
         }
 
@@ -342,5 +361,69 @@
   @media screen(lg) {
     flex-direction: row;
     margin-top: 16px;
+  }
+}
+
+.show-assigned-skills-checkbox {
+  display: block;
+  position: relative;
+  cursor: pointer;
+  user-select: none;
+
+  width: 72px;
+
+  input[type='checkbox'] {
+    appearance: none;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
+
+  .icon {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+
+    color: theme(colors.ash);
+    background-color: theme(colors.accent.DEFAULT);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 8px;
+
+    border-radius: 4px;
+
+    &:hover {
+      background-color: darken(theme(colors.accent.DEFAULT), 10%);
+    }
+  }
+
+  input:checked ~ .icon {
+    > .on {
+      display: block;
+    }
+
+    > .off {
+      display: none;
+    }
+  }
+
+  input:not(:checked) ~ .icon {
+    > .on {
+      display: none;
+    }
+
+    > .off {
+      display: block;
+    }
+  }
+}
+
+body:has(#show-assigned-skills:checked) {
+  .player-assigned-skill {
+    display: block;
   }
 }
