fix: uniform game class input

--- a/src/html/styles/main.css
+++ b/src/html/styles/main.css
@@ -5,6 +5,7 @@
 @import 'fade-scroll.css';
 @import 'flash-messages.css';
 @import 'footer.css';
+@import 'game-class-skill-input.css';
 @import 'navigation-bar.css';
 @import 'pagination.css';
 @import 'satoshi.css';
