fix: handle game server assignment error

--- a/src/games/views/html/style.css
+++ b/src/games/views/html/style.css
@@ -356,6 +356,10 @@
     &--warning {
       border-color: #ff9e1f;
     }
+
+    &--error {
+      border-color: theme('colors.accent.600');
+    }
   }
 }
 
