feat: add discord invite link configuration option

--- a/src/html/styles/admin-panel.css
+++ b/src/html/styles/admin-panel.css
@@ -83,7 +83,8 @@
       font-size: 18px;
 
       input[type='text'],
-      input[type='number'] {
+      input[type='number'],
+      input[type='url'] {
         background-color: theme(colors.abru.dark.25);
         color: theme(colors.white);
         border-radius: 8px;
